# OOP_Project1

./: CMakeLists.txt  README.md  run.cpp  tasks.txt
depend/: dep.cpp
src/person/: person.cpp  person.h
src/professor/: professor.cpp  professor.h
src/student/: student.cpp  student.h
src/subject/: subject.cpp  subject.h
